--- a/intl.zh-CN/用户指南/内核功能/内核发布日志.md
+++ b/intl.zh-CN/用户指南/内核功能/内核发布日志.md
@@ -14,11 +14,13 @@ PolarDB数据库引擎在PolarDB架构中的位置如下图所示。
 |--|----|---|---|
 |OLTP性能|支持热点行优化（适用于秒杀业务场景），详情请参见[热点行优化](/intl.zh-CN/用户指南/内核功能/OLTP性能/热点行优化.md)。|支持（内核版本需为 20200616以上）|不支持|
 |支持[线程池（Thread Pool）](/intl.zh-CN/用户指南/内核功能/OLTP性能/Thread Pool.md)。|支持（内核版本需为 20200423以上）|支持（内核版本需为 8.0.1.1.1或以上）|
-|OLAP性能|支持[并行查询（Parallel Query）](/intl.zh-CN/用户指南/内核功能/并行查询/并行查询.md)。|不支持|支持（内核版本需为 8.0.1.0.5或以上）|
-|并行查询支持半连接（SEMIJOIN），详情请参见[semi-join的并行执行](/intl.zh-CN/用户指南/内核功能/并行查询/semi-join的并行执行.md)。|不支持|支持（内核版本需为 8.0.1.1.2或以上）|
+|支持Fast Query Cache，详情请参见[Fast Query Cache](/intl.zh-CN/用户指南/内核功能/OLTP性能/Fast Query Cache.md)。|不支持|支持（内核版本需为 8.0.1.1.5或以上）|
+|OLAP性能|支持[并行查询（Parallel Query）](/intl.zh-CN/用户指南/内核功能/OLAP性能/并行查询/并行查询.md)。|不支持|支持（内核版本需为 8.0.1.0.5或以上）|
+|并行查询支持半连接（SEMIJOIN），详情请参见[semi-join的并行执行](/intl.zh-CN/用户指南/内核功能/OLAP性能/semi-join的并行执行.md)。|不支持|支持（内核版本需为 8.0.1.1.2或以上）|
 |并行查询支持联合（UNION）。|不支持|支持（内核版本需为 8.0.1.1.3或以上）|
-|并行查询支持哈希连接（HASHJOIN），详情请参见[并行查询中的hash join](/intl.zh-CN/用户指南/内核功能/并行查询/并行查询中的hash join.md)。|不支持|支持（内核版本需为 8.0.2.1.0或以上）|
-|安全|支持表回收站（Recycle Bin），避免出现因DROP误删导致数据丢失的情况，详情请参见[表回收站（Recycle Bin）](/intl.zh-CN/用户指南/内核功能/Recycle Bin.md)。|不支持|支持（内核版本需为 8.0.1.1.2或以上）|
+|并行查询支持哈希连接（HASHJOIN），详情请参见[并行查询中的hash join](/intl.zh-CN/用户指南/内核功能/OLAP性能/并行查询中的hash join.md)。|不支持|支持（内核版本需为 8.0.2.1.0或以上）|
+|支持ROLLUP，详情请参见[ROLLUP](/intl.zh-CN/用户指南/内核功能/OLAP性能/ROLLUP.md)。|不支持|支持（内核版本需为 8.0.1.1.0或以上）|
+|安全|支持表回收站（Recycle Bin），避免出现因DROP误删导致数据丢失的情况，详情请参见[表回收站（Recycle Bin）](/intl.zh-CN/用户指南/内核功能/数据同步与安全/Recycle Bin.md)。|不支持|支持（内核版本需为 8.0.1.1.2或以上）|
 
 ## 查询版本号
 
@@ -56,13 +58,13 @@ PolarDB MySQL 8.0支持如下版本：
 |Minor version|Revision version|发布日期|完全兼容的MySQL小版本|发布概述|
 |-------------|----------------|----|-------------|----|
 |8.0.2.x|8.0.2.1.1|20200826|8.0.18|修复一些已知问题。|
-|8.0.2.1.0|20200722|8.0.18|-   支持HASH JOIN及并行执行，详情请参见[并行查询中的hash join](/intl.zh-CN/用户指南/内核功能/并行查询/并行查询中的hash join.md)。
+|8.0.2.1.0|20200722|8.0.18|-   支持HASH JOIN及并行执行，详情请参见[并行查询中的hash join](/intl.zh-CN/用户指南/内核功能/OLAP性能/并行查询中的hash join.md)。
 -   支持实时监控SQL级别的CPU占用率、Performance Agent、热重启（Warm buffer pool），详情请参见[Resource Manager](/intl.zh-CN/用户指南/内核功能/性能数据监控/Resource Manager.md)、[Performance Agent](/intl.zh-CN/用户指南/内核功能/性能数据监控/Performance Agent.md)。 |
 |8.0.1.x|8.0.1.1.4|20200704|8.0.13|-   支持并行DDL，提升DDL执行效率。
 -   支持Simulated AIO动态调整多队列的长度。
 -   支持全文检索（Full Text Search，FTS）缓存一致性。 |
 |8.0.1.1.3|20200529|8.0.13|增强并行查询的功能。|
-|8.0.1.1.2|20200409|8.0.13|-   支持表回收站，避免出现因DROP误删导致数据丢失的情况，详情请参见[表回收站（Recycle Bin）](/intl.zh-CN/用户指南/内核功能/Recycle Bin.md)。
+|8.0.1.1.2|20200409|8.0.13|-   支持表回收站，避免出现因DROP误删导致数据丢失的情况，详情请参见[表回收站（Recycle Bin）](/intl.zh-CN/用户指南/内核功能/数据同步与安全/Recycle Bin.md)。
 -   优化临时表操作对性能的影响。
 -   增强并行查询的功能。 |
 |8.0.1.1.1|20200328|8.0.13|-   支持[线程池（Thread Pool）](/intl.zh-CN/用户指南/内核功能/OLTP性能/Thread Pool.md)。
@@ -85,7 +87,7 @@ PolarDB MySQL 8.0支持如下版本：
     |类别|说明|
     |--|--|
     |新增功能&性能优化|EXPLAIN支持并行计划的展示，支持通过FORMAT=TREE查看并行的执行计划树。|
-    |并行查询支持哈希连接（HASHJOIN），增强了无索引的JOIN性能，详情请参见[并行查询中的hash join](/intl.zh-CN/用户指南/内核功能/并行查询/并行查询中的hash join.md)。|
+    |并行查询支持哈希连接（HASHJOIN），增强了无索引的JOIN性能，详情请参见[并行查询中的hash join](/intl.zh-CN/用户指南/内核功能/OLAP性能/并行查询中的hash join.md)。|
     |支持Resource Manager功能，能够实现对CPU和内存资源的监控，详情请参见[Resource Manager](/intl.zh-CN/用户指南/内核功能/性能数据监控/Resource Manager.md)。|
     |支持Performance Agent，能够实现MySQL实例内部各项性能数据的采集与统计，您可以通过直接查询内存表PERF\_STATISTICS获取相关指标的性能数据，详情请参见[Performance Agent](/intl.zh-CN/用户指南/内核功能/性能数据监控/Performance Agent.md)。|
     |支持热重启（Warm buffer pool），在Crash重启和升级时，Buffer Pool中的数据依然存在，大幅度加快重启速度，并保持重启后性能无衰减。|
