--- a/cn.zh-CN/用户指南/购买集群或存储包/使用计算包.md
+++ b/cn.zh-CN/用户指南/购买集群或存储包/使用计算包.md
@@ -2,7 +2,7 @@
 
 相较于正常按量付费，计算包能够提供更加优惠的价格以抵扣PolarDB MySQL集群中计算节点的费用。同时，您还可以将计算包与自动扩、缩容服务配合使用，轻松应对业务量波动。
 
-在变更以**包年包月**方式购买的PolarDB集群的配置时会产生一些额外成本，例如在升级配置（或添加节点）时需补齐剩余生命周期内的差价或在降级配置（或删除节点）时会收取一定手续费再退差价。
+在变更以**包年包月**方式购买的PolarDB集群的配置时会产生一些额外成本，例如在升级配置（或添加节点）时需补齐剩余生命周期内的差价。
 
 为避免变更配置时产生上述额外成本，推荐您购买**按量付费**的集群并使用计算包来抵扣，这样既能兼顾按量付费的灵活性，变配之后立即按照新配置计费；又能享受比正常按量付费更优惠的价格来抵扣计算节点的费用。
 
@@ -27,6 +27,7 @@
     |polar.mysql.x8.xlarge|8核64 GB|0.12|
     |polar.mysql.x8.2xlarge|16核128 GB|0.24|
     |polar.mysql.x8.4xlarge|32核256 GB|0.48|
+    |polar.mysql.x8.8xlarge|64核512 GB|1.12|
     |polar.mysql.x8.12xlarge|88核710 GB|1.32|
 
 -   单位
